# zkmcu

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  codebook.toml  justfile  lefthook.yml  reproduce.sh
.github/workflows/: ci.yml
.zed/: settings.json
benchmarks/: README.md  schema.md
crates/bench-core/: Cargo.toml
crates/bench-core/src/: boot.rs  heap.rs  lib.rs  stack.rs  timing.rs  usb.rs
crates/bench-rp2350-m33/: Cargo.toml  memory.x
crates/bench-rp2350-m33-bls12/: Cargo.toml
crates/bench-rp2350-m33-bls12/src/: main.rs
crates/bench-rp2350-m33-bn-asm-test/: Cargo.toml
crates/bench-rp2350-m33-bn-asm-test/src/: main.rs
crates/bench-rp2350-m33-pq-poseidon-chain/: Cargo.toml
crates/bench-rp2350-m33-pq-semaphore/: Cargo.toml
crates/bench-rp2350-m33-pq-semaphore-ct-reject/: Cargo.toml  memory.x
crates/bench-rp2350-m33-pq-semaphore-dual/: Cargo.toml
crates/bench-rp2350-m33-pq-semaphore-dual-ct/: Cargo.toml
crates/bench-rp2350-m33-pq-semaphore-gl/: Cargo.toml
crates/bench-rp2350-m33-pq-semaphore-gl/src/: main.rs
crates/bench-rp2350-m33-pq-semaphore-reject/: Cargo.toml
crates/bench-rp2350-m33-stark/: Cargo.toml
crates/bench-rp2350-m33-stark-prover/: Cargo.toml
crates/bench-rp2350-m33-stark-prover-bb/: Cargo.toml
crates/bench-rp2350-m33-stark-prover-threshold/: Cargo.toml
crates/bench-rp2350-m33-stark-prover/src/: main.rs
crates/bench-rp2350-m33-stark/src/: main.rs
crates/bench-rp2350-m33-timing-oracle/: Cargo.toml  build.rs
crates/bench-rp2350-m33-timing-oracle/src/: main.rs
crates/bench-rp2350-m33/src/: main.rs
crates/bench-rp2350-rv32/: Cargo.toml
crates/bench-rp2350-rv32-bls12/: Cargo.toml
crates/bench-rp2350-rv32-bls12/src/: main.rs
crates/bench-rp2350-rv32-pq-poseidon-chain/: Cargo.toml
crates/bench-rp2350-rv32-pq-semaphore/: Cargo.toml
crates/bench-rp2350-rv32-pq-semaphore-ct-reject/: Cargo.toml
crates/bench-rp2350-rv32-pq-semaphore-dual/: Cargo.toml
crates/bench-rp2350-rv32-pq-semaphore-dual-ct/: Cargo.toml
crates/bench-rp2350-rv32-pq-semaphore-gl/: Cargo.toml
crates/bench-rp2350-rv32-pq-semaphore-reject/: Cargo.toml  build.rs
crates/bench-rp2350-rv32-stark/: Cargo.toml
crates/bench-rp2350-rv32-stark-prover/: Cargo.toml
crates/bench-rp2350-rv32-stark-prover-bb/: Cargo.toml
crates/bench-rp2350-rv32-stark-prover/src/: main.rs
crates/bench-rp2350-rv32-stark/src/: main.rs
crates/bench-rp2350-rv32/src/: main.rs
crates/zkmcu-babybear/: Cargo.toml
crates/zkmcu-babybear/src/: field.rs  lib.rs  tests.rs
crates/zkmcu-bump-alloc/: Cargo.toml
crates/zkmcu-bump-alloc/src/: lib.rs
crates/zkmcu-host-gen/: Cargo.toml
crates/zkmcu-host-gen/src/: bls12_381.rs  bn254.rs  circuits.rs  main.rs  measure_poseidon.rs  poseidon.rs  pq_poseidon_chain.rs  pq_semaphore.rs  pq_semaphore_dual.rs  pq_semaphore_gl.rs  semaphore.rs  stark.rs  stark_babybear.rs  umaal_kat.rs
crates/zkmcu-poseidon-audit/: Cargo.toml
crates/zkmcu-poseidon-audit/src/: internal_layer.rs  lib.rs  mds.rs  params.rs  perm.rs  poly.rs  round_numbers.rs  subspace_trail.rs
crates/zkmcu-poseidon-audit/tests/: perm_diff.rs
crates/zkmcu-poseidon-circuit/: Cargo.toml
crates/zkmcu-poseidon-circuit/src/: lib.rs
crates/zkmcu-vectors/: Cargo.toml
crates/zkmcu-vectors/data/: README.md
crates/zkmcu-vectors/src/: lib.rs  mutations.rs
crates/zkmcu-vectors/tests/: loaders.rs
crates/zkmcu-verifier/: Cargo.toml
crates/zkmcu-verifier-bls12/: Cargo.toml
crates/zkmcu-verifier-bls12/src/: lib.rs
crates/zkmcu-verifier-bls12/tests/: adversarial.rs  happy_path.rs  properties.rs  verify_circuits.rs
crates/zkmcu-verifier-plonky3/: Cargo.toml
crates/zkmcu-verifier-plonky3/src/: lib.rs  poseidon2_chain.rs  pq_semaphore.rs  pq_semaphore_blake3.rs  pq_semaphore_dual.rs  pq_semaphore_dual_ct.rs  pq_semaphore_goldilocks.rs
crates/zkmcu-verifier-plonky3/tests/: poseidon_chain.rs  pq_semaphore.rs  pq_semaphore_dual.rs  pq_semaphore_dual_ct.rs  pq_semaphore_dual_ct_timing.rs  pq_semaphore_goldilocks.rs  pq_semaphore_reject.rs
crates/zkmcu-verifier-stark/: Cargo.toml
crates/zkmcu-verifier-stark/src/: fibonacci.rs  fibonacci_babybear.rs  lib.rs  poseidon_threshold.rs  threshold_check.rs
crates/zkmcu-verifier-stark/tests/: adversarial.rs  fibonacci_roundtrip.rs  poseidon_threshold_roundtrip.rs  properties.proptest-regressions  properties.rs  threshold_roundtrip.rs
crates/zkmcu-verifier/src/: lib.rs
crates/zkmcu-verifier/tests/: adversarial.rs  differential_arkworks.rs  parse_semaphore.rs  properties.proptest-regressions  properties.rs  verify_square.rs
fuzz/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
fuzz/fuzz_targets/: bls12_parse_proof.rs  bls12_parse_public.rs  bls12_parse_vk.rs  bn254_parse_proof.rs  bn254_parse_public.rs  bn254_parse_vk.rs  bn254_verify_bytes.rs  pq_semaphore_dual_parse_and_verify.rs  pq_semaphore_parse_proof_b3.rs  pq_semaphore_parse_proof_p2.rs  pq_semaphore_parse_public.rs  stark_parse_proof.rs
fuzz/scripts/: regen_pq_semaphore_seeds.py
research/: README.md
research/lib/: refs.bib  template.typ
research/notebook/: 2026-04-22-bls12-381-dep-fit.md  2026-04-23-stark-prior-art.md  2026-04-29-pq-semaphore-air-design.md  2026-04-29-pq-semaphore-verifier-spike.md  2026-04-29-security-128bit-plan.md  2026-04-30-hardening-plan.md  2026-04-30-prior-art-stark-side.md  2026-04-30-security-claim-table.md  2026-04-30-writeup-outline.md
research/notebook/2026-04-22-bls12-381-dep-fit/: Cargo.toml
research/notebook/2026-04-22-bls12-381-dep-fit/src/: lib.rs
research/notebook/2026-04-23-stark-dep-fit/: Cargo.toml
research/notebook/2026-04-23-stark-dep-fit/src/: lib.rs
research/notebook/2026-04-29-pq-semaphore-verifier-spike/: Cargo.toml
research/notebook/2026-04-29-pq-semaphore-verifier-spike/src/: lib.rs
research/postmortems/: 2026-04-23-no-umaal-codegen.typ  2026-04-23-opt-level-3-regression.typ  2026-04-24-babybear-quartic-regresses.typ  (+5 more)
scripts/: timing_oracle.py
web/: astro.config.mjs  eslint.config.js  package.json
(+207 files in other folders)
