[package]
name = "bench-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
embedded-alloc = { version = "0.7", features = ["llff", "tlsf"] }
heapless = "0.9"
rp235x-hal = { version = "0.4", features = ["binary-info", "critical-section-impl", "rt"] }
usb-device = "0.3"
usbd-serial = "0.2"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.7"
