[package]
name = "bench-rp2350-m33-stark-prover"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bench-core = { path = "../bench-core" }
cortex-m-rt = "0.7"
heapless = "0.9"
panic-halt = "1.0"
rp235x-hal = { version = "0.4", features = ["binary-info", "critical-section-impl", "rt"] }
# winterfell workspace dep has default-features = false, giving us the
# no_std prover + verifier without Rayon or std::sync.
winterfell = { workspace = true }
zkmcu-verifier-stark = { path = "../zkmcu-verifier-stark" }
