[package]
name = "bench-rp2350-m33-stark"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Phase 3.3, swap the baked-in vectors and AIR from Goldilocks + Quadratic
# to BabyBear + Quartic. Requires the `stark-babybear` host-gen subcommand
# to have been run at least once so the vector files exist on disk.
babybear = []

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
critical-section = "1.2"
embedded-alloc = { version = "0.7", features = ["tlsf"] }
embedded-hal = "1.0"
fugit = "0.3"
heapless = "0.9"
panic-halt = "1.0"
rp235x-hal = { version = "0.4", features = ["binary-info", "critical-section-impl", "rt"] }
usb-device = "0.3"
usbd-serial = "0.2"
zkmcu-verifier-stark = { path = "../zkmcu-verifier-stark" }
