[package]
name = "bench-rp2350-m33"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
critical-section = "1.2"
embedded-alloc = { version = "0.7", features = ["llff"] }
embedded-hal = "1.0"
fugit = "0.3"
heapless = "0.9"
panic-halt = "1.0"
rp235x-hal = { version = "0.4", features = ["binary-info", "critical-section-impl", "rt"] }
substrate-bn = { workspace = true }
usb-device = "0.3"
usbd-serial = "0.2"
zkmcu-vectors = { path = "../zkmcu-vectors" }
zkmcu-verifier = { path = "../zkmcu-verifier" }
