[package]
name = "bench-rp2350-rv32-stark"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Phase 3.3, swap baked-in vectors and AIR to BabyBear + Quartic. Needs
# `zkmcu-host-gen stark-babybear` to have produced the vectors first.
babybear = []

[dependencies]
bench-core = { path = "../bench-core" }
heapless = "0.9"
panic-halt = "1.0"
# Pinned to match rp235x-hal 0.4.0's transitive riscv / riscv-rt pins. Update
# together with rp235x-hal when it tracks a newer riscv-rt.
riscv = "0.11"
riscv-rt = "0.12"
rp235x-hal = { version = "0.4", features = ["binary-info", "critical-section-impl", "rt"] }
zkmcu-verifier-stark = { path = "../zkmcu-verifier-stark" }
