[package]
name = "zkmcu-bump-alloc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "no_std bump-allocator GlobalAlloc with watermark save/restore, for variance-stable benchmark loops"

[lints]
workspace = true

[dev-dependencies]
# Property-based alloc sequences: random mixes of alloc / realloc with
# bounded sizes, asserting in-range + aligned + non-overlapping pointers.
proptest = "1.6"
