[package]
name = "zkmcu-host-gen"
version = "0.1.0"
description = "Generates Groth16/BN254 test vectors in EIP-197 format via arkworks, for use by zkmcu-vectors"
keywords = ["zk-snark", "groth16", "bn254", "arkworks", "test-vectors"]
categories = ["cryptography", "development-tools", "command-line-utilities"]
readme = "../../README.md"
homepage = "https://github.com/Niek-Kamer/zkmcu"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ark-bn254 = { workspace = true }
zkmcu-poseidon-circuit = { path = "../zkmcu-poseidon-circuit" }
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = "0.5"
ark-std = { workspace = true, features = ["std"] }
# Pinned to the rand 0.8 ecosystem because arkworks 0.5 consumes rand_core 0.6
# and ark-snark's `prove` signature requires traits from that version. Bump
# together with arkworks when ark-groth16 0.6 releases.
rand = "0.8"
rand_chacha = "0.3"

# zkcrypto stack, used only for the host-side EIP-2537 cross-check of
# BLS12-381 vectors. This catches wire-format bugs (Fp padding, Fp2 byte
# order) before committed .bin files hit zkmcu-vectors.
bls12_381 = { workspace = true }
group = { workspace = true }
pairing = { workspace = true }

# BN254 Rust reference for generating UMAAL KAT fixtures. Host target never
# activates `cortex-m33-asm`, so this resolves to the pure-Rust mul_reduce,
# wich is the intended reference for the Pico 2 W firmware to verify its
# asm path against.
substrate-bn = { workspace = true }

# JSON for importing external VK fixtures (Semaphore). Only reaches this
# dep at build time when the `semaphore` subcommand is invoked; main
# BN254/BLS12-381 paths don't touch it.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# STARK host-side prover. Uses the `std` feature so the winterfell prover
# path is available (tracing, threads, rayon where helpful). The verifier
# sibling `zkmcu-verifier-stark` uses the same crate with `no_std`; both
# sides must share the AIR definition via the path dep below.
winterfell = { workspace = true, features = ["std"] }
zkmcu-babybear = { path = "../zkmcu-babybear" }
zkmcu-verifier-stark = { path = "../zkmcu-verifier-stark" }

# Plonky3 host-side prover for the PQ-Semaphore arc. The `pq-poseidon-chain`
# subcommand uses this crate's audited `make_config` / `build_air` /
# `encode_proof` so verifier and prover share a single source of truth on
# field, hash, FRI parameters, and round constants.
zkmcu-verifier-plonky3 = { path = "../zkmcu-verifier-plonky3" }
p3-uni-stark = { path = "../../vendor/Plonky3/uni-stark" }
p3-baby-bear = { path = "../../vendor/Plonky3/baby-bear" }
p3-poseidon2 = { path = "../../vendor/Plonky3/poseidon2" }
p3-poseidon2-air = { path = "../../vendor/Plonky3/poseidon2-air" }
p3-field = { path = "../../vendor/Plonky3/field" }
p3-matrix = { path = "../../vendor/Plonky3/matrix" }
