[package]
name = "zkmcu-poseidon-circuit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
