[package]
name = "zkmcu-vectors"
version = "0.1.0"
description = "Baked-in Groth16/BN254 test vectors (EIP-197 format) for zkmcu-verifier"
keywords = ["no-std", "zk-snark", "groth16", "bn254", "test-vectors"]
categories = ["cryptography", "embedded", "no-std"]
readme = "../../README.md"
homepage = "https://github.com/Niek-Kamer/zkmcu"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zkmcu-verifier = { path = "../zkmcu-verifier", version = "0.1.0" }
