[package]
name = "zkmcu-verifier-stark"
version = "0.1.0"
description = "no_std STARK (winterfell) verifier for ARM Cortex-M and RISC-V microcontrollers"
keywords = ["no-std", "stark", "fri", "winterfell", "cryptography"]
categories = ["cryptography", "embedded", "no-std"]
readme = "../../README.md"
homepage = "https://github.com/Niek-Kamer/zkmcu"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
winterfell = { workspace = true }
# Needed for `SliceReader` + `Deserializable` so we can detect trailing
# bytes after `Proof::read_from`. Winterfell's `Proof::from_bytes` helper
# explicitly documents that extra bytes are tolerated, that's a
# malleability class we close at the wrapper.
winter-utils = { workspace = true }
zkmcu-babybear = { path = "../zkmcu-babybear" }

[dev-dependencies]
# Adversarial tests: seeded RNG for bit-flip sampling (exhaustive bit-flip
# is infeasible on ~30 KB proofs) and proptest for parser fuzz.
proptest = "1.6"
rand = "0.8"
rand_chacha = "0.3"
