[package]
name = "zkmcu-verifier"
version = "0.1.0"
description = "no_std Groth16/BN254 zk-SNARK verifier for ARM Cortex-M and RISC-V microcontrollers"
keywords = ["no-std", "zk-snark", "groth16", "bn254", "cryptography"]
categories = ["cryptography", "embedded", "no-std"]
readme = "../../README.md"
homepage = "https://github.com/Niek-Kamer/zkmcu"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
substrate-bn = { workspace = true }

[dev-dependencies]
proptest = "1.6"
# Cross-check substrate-bn's Rust Fq/Fr/G1/G2 arithmetic against an independent
# BN254 implementation. Bugs that happen to cancel in end-to-end verify still
# show up at the operation boundary. Dev-only so the library crate stays
# `no_std` without pulling arkworks into downstream builds.
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
